--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -1,3 +1,14 @@
 OpenIDE-Module-Name=db2php
 Templates/Scripting/phpClass=PHP Entity Class from Database
 PhpClassVisualPanel1.jLabel1.text=Connection:
+PhpClassVisualPanel2.jLabel1.text=Database Layer:
+PhpClassVisualPanel2.generateTypeCheks.text=Generate Type Checks
+PhpClassVisualPanel2.buttonBrowse.text=Browse
+1
+PhpClassVisualPanel2.jLabel2.text=Directory:
+PhpClassVisualPanel2.jLabel1.text_1=Database Layer:
+PhpClassVisualPanel2.jLabel2.text_1=Directory
+PhpClassVisualPanel2.generateChecksSelection.text=Generate Checks
+PhpClassVisualPanel2.jLabel1.text_2=Database Layer:
+PhpClassVisualPanel2.jCheckBox1.text=Generate Type Checks
+PhpClassVisualPanel2.jLabel2.text_2=Directory:
