ADD: field modifications and class name prefix

--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -8,7 +8,9 @@ PhpClassVisualPanel2.buttonBrowse.text=Browse
 PhpClassVisualPanel2.jLabel2.text=Directory:
 PhpClassVisualPanel2.jLabel1.text_1=Database Layer:
 PhpClassVisualPanel2.jLabel2.text_1=Directory
-PhpClassVisualPanel2.generateChecksSelection.text=Generate Checks
+PhpClassVisualPanel2.generateChecksSelection.text=Generate Type Checks
 PhpClassVisualPanel2.jLabel1.text_2=Database Layer:
-PhpClassVisualPanel2.jCheckBox1.text=Generate Type Checks
 PhpClassVisualPanel2.jLabel2.text_2=Directory:
+PhpClassVisualPanel2.trackModificationsSelection.text=Track Field Modifications
+PhpClassVisualPanel2.jLabel3.text=Class Name prefix:
+PhpClassVisualPanel2.classNamePrefix.text=jTextField1
