--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -13,4 +13,4 @@ PhpClassVisualPanel2.jLabel1.text_2=Database Layer:
 PhpClassVisualPanel2.jLabel2.text_2=Directory:
 PhpClassVisualPanel2.trackModificationsSelection.text=Track Field Modifications
 PhpClassVisualPanel2.jLabel3.text=Class Name prefix:
-PhpClassVisualPanel2.classNamePrefix.text=jTextField1
+PhpClassVisualPanel2.classNamePrefix.text=Model
