--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -1,4 +1,8 @@
+OpenIDE-Module-Display-Category=PHP
+OpenIDE-Module-Long-Description=\
+    Plugin to generate PHP entity classes from database tables.
 OpenIDE-Module-Name=db2php
+OpenIDE-Module-Short-Description=Generate PHP entity classes from database tables.
 Templates/Scripting/phpClass=PHP Entity Class from Database
 PhpClassVisualPanel1.jLabel1.text=Connection:
 PhpClassVisualPanel2.jLabel1.text=Database Layer:
