ADD: identifierQuoteString input

--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -20,3 +20,6 @@ PhpClassVisualPanel2.jLabel3.text=Class Name prefix:
 PhpClassVisualPanel2.classNamePrefix.text=
 PhpClassVisualPanel2.jLabel4.text=Class Name suffix:
 PhpClassVisualPanel2.classNameSuffix.text=Model
+PhpClassVisualPanel2.jLabel5.text=Identifier quote string:
+PhpClassVisualPanel2.identifierQuoteString.toolTipText=Quote string for field names and table names in SQL
+PhpClassVisualPanel2.identifierQuoteString.text=
