CHG: refactor a bit

--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -4,7 +4,6 @@ OpenIDE-Module-Long-Description=\
 OpenIDE-Module-Name=db2php
 OpenIDE-Module-Short-Description=Generate PHP entity classes from database tables.
 Templates/Scripting/phpClass=PHP Entity Class from Database
-PhpClassVisualPanel1.jLabel1.text=Connection:
 PhpClassVisualPanel2.jLabel1.text=Database Layer:
 PhpClassVisualPanel2.generateTypeCheks.text=Generate Type Checks
 PhpClassVisualPanel2.buttonBrowse.text=Browse
@@ -23,3 +22,4 @@ PhpClassVisualPanel2.classNameSuffix.text=Model
 PhpClassVisualPanel2.jLabel5.text=Identifier quote string:
 PhpClassVisualPanel2.identifierQuoteString.toolTipText=Quote string for field names and table names in SQL
 PhpClassVisualPanel2.identifierQuoteString.text=
+PhpClassVisualPanelTableSelection.jLabel1.text=Connection:
