CHG: use combobox for quote

--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -20,6 +20,7 @@ PhpClassVisualPanel2.classNamePrefix.text=
 PhpClassVisualPanel2.jLabel4.text=Class Name suffix:
 PhpClassVisualPanel2.classNameSuffix.text=Model
 PhpClassVisualPanel2.jLabel5.text=Identifier quote string:
-PhpClassVisualPanel2.identifierQuoteString.toolTipText=Quote string for field names and table names in SQL
-PhpClassVisualPanel2.identifierQuoteString.text=
 PhpClassVisualPanelTableSelection.jLabel1.text=Connection:
+PhpClassVisualPanel2.identifierQuoteString.toolTipText=Quote string for field and table names in SQL
+PhpClassVisualPanel2.trackModificationsSelection.toolTipText=generate code to enable checking what has been modified in an object state
+PhpClassVisualPanel2.destinationDirectory.toolTipText=the output directory
