ADD: support for fluent interface

--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -24,3 +24,4 @@ PhpClassVisualPanelTableSelection.jLabel1.text=Connection:
 PhpClassVisualPanel2.identifierQuoteString.toolTipText=Quote string for field and table names in SQL
 PhpClassVisualPanel2.trackModificationsSelection.toolTipText=generate code to enable checking what has been modified in an object state
 PhpClassVisualPanel2.destinationDirectory.toolTipText=the output directory
+PhpClassVisualPanel2.fluentInterfaceSelection.text=Fluent interface
