--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -25,3 +25,4 @@ PhpClassVisualPanel2.identifierQuoteString.toolTipText=Quote string for field an
 PhpClassVisualPanel2.trackModificationsSelection.toolTipText=generate code to enable checking what has been modified in an object state
 PhpClassVisualPanel2.destinationDirectory.toolTipText=the output directory
 PhpClassVisualPanel2.fluentInterfaceSelection.text=Fluent interface
+PhpClassVisualPanel2.fluentInterfaceSelection.toolTipText=Allow chaining of setters
