CHG: plugin description

--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -1,6 +1,7 @@
 OpenIDE-Module-Display-Category=PHP
 OpenIDE-Module-Long-Description=\
-    Plugin to generate PHP entity classes from database tables.
+    Generate PHP Entity Classes from database tables.\n\
+    The generated Classes will have setters/getters for all fields and methods to get/insert/select/delete from the table.
 OpenIDE-Module-Name=db2php
 OpenIDE-Module-Short-Description=Generate PHP entity classes from database tables.
 Templates/Scripting/phpClass=PHP Entity Class from Database
