ADD: update center

--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -4,6 +4,8 @@ OpenIDE-Module-Long-Description=\
     The generated Classes will have setters/getters for all fields and methods to get/insert/select/delete from the table.
 OpenIDE-Module-Name=db2php
 OpenIDE-Module-Short-Description=Generate PHP entity classes from database tables.
+org_afraid_poison_db2php_update_center=http://db2php.googlecode.com/svn/nb/updates.xml
+Services/AutoupdateType/org_afraid_poison_db2php_update_center.instance=db2php Update Center
 Templates/Scripting/phpClass=PHP Entity Class from Database
 PhpClassVisualPanel2.jLabel1.text=Database Layer:
 PhpClassVisualPanel2.generateTypeCheks.text=Generate Type Checks
