--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -27,3 +27,4 @@ PhpClassVisualPanel2.trackModificationsSelection.toolTipText=generate code to en
 PhpClassVisualPanel2.destinationDirectory.toolTipText=the output directory
 PhpClassVisualPanel2.fluentInterfaceSelection.text=Fluent interface
 PhpClassVisualPanel2.fluentInterfaceSelection.toolTipText=Allow chaining of setters
+Templates/Scripting/phpClassUtility=PHP Entity Class helpers
