--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -28,3 +28,5 @@ PhpClassVisualPanel2.destinationDirectory.toolTipText=the output directory
 PhpClassVisualPanel2.fluentInterfaceSelection.text=Fluent interface
 PhpClassVisualPanel2.fluentInterfaceSelection.toolTipText=Allow chaining of setters
 Templates/Scripting/phpClassUtility=PHP Entity Class helpers
+PhpClassUtilityVisualPanel1.dfc.text=DFC.class.php
+PhpClassUtilityVisualPanel1.simpleDatabaseInterface.text=SimpleDatabaseInterface.class.php
