ADD: continue utility classes wizard

--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -30,3 +30,6 @@ PhpClassVisualPanel2.fluentInterfaceSelection.toolTipText=Allow chaining of sett
 Templates/Scripting/phpClassUtility=PHP Entity Class helpers
 PhpClassUtilityVisualPanel1.dfc.text=DFC.class.php
 PhpClassUtilityVisualPanel1.simpleDatabaseInterface.text=SimpleDatabaseInterface.class.php
+PhpClassUtilityVisualPanel1.jLabel2.text=Directory:
+PhpClassUtilityVisualPanel1.buttonBrowse.text=Browse
+PhpClassUtilityVisualPanel1.destinationDirectory.toolTipText=the output directory
