--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -32,3 +32,4 @@ PhpClassUtilityVisualPanel1.simpleDatabaseInterface.text=SimpleDatabaseInterface
 FileSelectionPanel.buttonBrowse.text=Browse
 FileSelectionPanel.jLabel2.text=Directory:
 FileSelectionPanel.destinationDirectory.toolTipText=the output directory
+PhpClassVisualPanel2.jLabel2.text_2=CamelCaseFairy:
