--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -31,3 +31,4 @@ FileSelectionPanel.buttonBrowse.text=Browse
 FileSelectionPanel.jLabel2.text=Directory:
 FileSelectionPanel.destinationDirectory.toolTipText=the output directory
 PhpClassVisualPanel2.jLabel2.text_2=CamelCaseFairy:
+PhpClassVisualPanel2.camelCaseFairy.toolTipText=The CamelCaseFairy will sprinkle magic dust on your Identifiers. If you believe hard enough in it they will be correctly converted to CamelCase.
