--- a/src/org/afraid/poison/db2php/Bundle.properties
+++ b/src/org/afraid/poison/db2php/Bundle.properties
@@ -32,3 +32,6 @@ FileSelectionPanel.jLabel2.text=Directory:
 FileSelectionPanel.destinationDirectory.toolTipText=the output directory
 PhpClassVisualPanel2.jLabel2.text_2=CamelCaseFairy:
 PhpClassVisualPanel2.camelCaseFairy.toolTipText=The CamelCaseFairy will sprinkle magic dust on your Identifiers. If you believe hard enough in it they will be correctly converted to CamelCase.
+PhpClassUtilityVisualPanel1.dfc.toolTipText=Data Filter Criteria helper class
+PhpClassUtilityVisualPanel1.dsc.toolTipText=Data Sort Criteria helper class
+PhpClassUtilityVisualPanel1.dsc.text=DSC.class.php
