ADD: cnt xml config parser

--- a/db2phplib/nbproject/project.properties
+++ b/db2phplib/nbproject/project.properties
@@ -28,7 +28,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.common.jar}
+    ${reference.common.jar}:\
+    ${libs.jdom.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
