--- a/db2phpcli/nbproject/project.properties
+++ b/db2phpcli/nbproject/project.properties
@@ -27,7 +27,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.db2phplib.jar}:\
+    ${libs.jdom.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,6 +59,8 @@ main.class=db2phpcli.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
+project.db2phplib=../db2phplib
+reference.db2phplib.jar=${project.db2phplib}/dist/db2phplib.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
