--- a/db2phpcli/nbproject/project.properties
+++ b/db2phpcli/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=db2phpcli
+application.vendor=andreas.schnaiter
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,12 +24,15 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/db2phpcli.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.db2phplib.jar}:\
-    ${libs.jdom.classpath}
+    ${libs.jdom.classpath}:\
+    ${reference.common.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,11 +58,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=db2phpcli.Main
+main.class=org.afraid.poison.db2php.cli.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
+project.common=../../common
 project.db2phplib=../db2phplib
+reference.common.jar=${project.common}/dist/common.jar
 reference.db2phplib.jar=${project.db2phplib}/dist/db2phplib.jar
 run.classpath=\
     ${javac.classpath}:\
