--- a/db2phplib/nbproject/project.properties
+++ b/db2phplib/nbproject/project.properties
@@ -2,8 +2,9 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.homepage=http://code.google.com/p/db2php/
 application.title=db2phplib
-application.vendor=andreas.schnaiter
+application.vendor=Andreas Schnaiter
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,7 +28,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.common.jar}:\
     ${libs.jdom.classpath}
@@ -56,6 +59,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=defaut
+jnlp.offline-allowed=false
+jnlp.signed=false
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
 project.common=../../common
