--- a/db2phpcli/nbproject/project.properties
+++ b/db2phpcli/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=db2phpcli
-application.vendor=andreas.schnaiter
+application.vendor=Andreas Schnaiter
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,7 +27,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.db2phplib.jar}:\
     ${libs.jdom.classpath}:\
@@ -35,7 +37,7 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.5
@@ -58,6 +60,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=defaut
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=org.afraid.poison.db2php.cli.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
