CHG: don't need extra project for CLI

--- a/db2phplib/nbproject/project.properties
+++ b/db2phplib/nbproject/project.properties
@@ -27,16 +27,16 @@ dist.jar=${dist.dir}/db2phplib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.db2phplib-src=src
 includes=**
-jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
-jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.common.jar}:\
-    ${libs.jdom.classpath}
+    ${libs.jdom.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.6
@@ -59,12 +59,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.mixed.code=defaut
-jnlp.offline-allowed=false
-jnlp.signed=false
+main.class=org.afraid.poison.db2php.generator.Main
+manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
 project.common=../../common
@@ -80,5 +76,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.db2phplib-src}
