--- a/db2phpnb/src/org/afraid/poison/db2php/Bundle.properties
+++ b/db2phpnb/src/org/afraid/poison/db2php/Bundle.properties
@@ -24,6 +24,7 @@ PhpClassVisualPanel2.identifierQuoteString.toolTipText=Quote string for field an
 PhpClassVisualPanel2.trackModificationsSelection.toolTipText=generate code to enable checking what has been modified in an object state
 PhpClassVisualPanel2.fluentInterfaceSelection.text=Fluent interface
 PhpClassVisualPanel2.fluentInterfaceSelection.toolTipText=Allow chaining of setters
+Templates/Scripting/phpClassesFromXml=PHP Entity Classes from XML definition
 Templates/Scripting/phpClassUtility=PHP Entity Class helpers
 PhpClassUtilityVisualPanel1.dfc.text=DFC.class.php
 PhpClassUtilityVisualPanel1.simpleDatabaseInterface.text=SimpleDatabaseInterface.class.php
@@ -35,3 +36,4 @@ PhpClassVisualPanel2.camelCaseFairy.toolTipText=The CamelCaseFairy will sprinkle
 PhpClassUtilityVisualPanel1.dfc.toolTipText=Data Filter Criteria helper class
 PhpClassUtilityVisualPanel1.dsc.toolTipText=Data Sort Criteria helper class
 PhpClassUtilityVisualPanel1.dsc.text=DSC.class.php
+PhpClassesFromXmlVisualPanel1.fileChooserLabel.text=Choose XML control file:
