ADD: cnt xml selection

--- a/db2phpnb/nbproject/project.properties
+++ b/db2phpnb/nbproject/project.properties
@@ -1,4 +1,5 @@
 file.reference.common.jar=release/modules/ext/common.jar
+file.reference.db2phplib.jar=release/modules/ext/db2phplib.jar
 file.reference.jdom.jar=release/modules/ext/jdom.jar
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
