ADD: ezc support selection

--- a/db2phpnb/src/org/afraid/poison/db2php/Bundle.properties
+++ b/db2phpnb/src/org/afraid/poison/db2php/Bundle.properties
@@ -37,3 +37,4 @@ PhpClassUtilityVisualPanel1.dfc.toolTipText=Data Filter Criteria helper class
 PhpClassUtilityVisualPanel1.dsc.toolTipText=Data Sort Criteria helper class
 PhpClassUtilityVisualPanel1.dsc.text=DSC.class.php
 PhpClassesFromXmlVisualPanel1.fileChooserLabel.text=Choose XML control file:
+PhpClassVisualPanel2.ezcSupportSelection.text=ezComponents Support
