ADD: check if method already exists, number it if required

--- a/db2phpnb/nbproject/project.properties
+++ b/db2phpnb/nbproject/project.properties
@@ -1,3 +1,5 @@
+file.reference.common.jar=release/modules/ext/common.jar
+file.reference.jdom.jar=release/modules/ext/jdom.jar
 file.reference.mysql-connector-java-5.1.6-bin.jar=release/modules/ext/mysql-connector-java-5.1.6-bin.jar
 file.reference.postgresql-8.4-701.jdbc4.jar=release/modules/ext/postgresql-8.4-701.jdbc4.jar
 javac.source=1.6
