ADD: exclude xml files larger than 1MB

--- a/db2phplib/nbproject/project.properties
+++ b/db2phplib/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.db2phplib-src=src
+file.reference.jdom.jar=/home/andreas.schnaiter/files/java_librarys/jdom/build/jdom.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${reference.common.jar}:\
     ${libs.jdom.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jdom.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -59,6 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 main.class=org.afraid.poison.db2php.generator.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
