--- a/db2phplib/build.xml
+++ b/db2phplib/build.xml
@@ -71,4 +71,41 @@
     nbproject/build-impl.xml file. 
 
     -->
+
+	<target name="-post-jar"> <!--  depends="jar" -->
+
+        <!-- Change the value of this property to be the name of your JAR,
+             minus the .jar extension. It should not have spaces.
+             <property name="single.jar.name" value="MyJarName"/>
+        -->
+        <property name="single.jar.name" value="db2phpcli"/>
+
+
+        <!-- don't edit below this line -->
+
+        <property name="single.dir" value="one-jar"/>
+        <property name="single.jar" value="${single.dir}/${single.jar.name}.jar"/>
+
+        <echo message="Packaging ${application.title} into a single JAR at ${single.jar}"/>
+
+        <delete dir="${single.dir}"/>
+        <mkdir dir="${single.dir}"/>
+
+        <jar destfile="${single.dir}/temp_final.jar" filesetmanifest="skip" compress="true">
+            <zipgroupfileset dir="dist" includes="*.jar"/>
+            <zipgroupfileset dir="dist/lib" includes="*.jar"/>
+
+            <manifest>
+                <attribute name="Main-Class" value="${main.class}"/>
+            </manifest>
+        </jar>
+
+        <zip destfile="${single.jar}">
+            <zipfileset src="${single.dir}/temp_final.jar"
+            excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+        </zip>
+
+        <delete file="${single.dir}/temp_final.jar"/>
+
+    </target>
 </project>
